# ae_app

./: .editorconfig  README.md
back/: .env.dist  .gitignore  docker-compose.yml  manage.py  pyproject.toml
back/ae_app/: apps.py
back/ae_app_project/: asgi.py  settings.py  urls.py  wsgi.py
front/: package-lock.json  package.json
front/src/: App.svelte  main.ts
front/src/components/: CounterButton.svelte
