[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
better-exceptions = "^0.3.3"
drf-spectacular = "^0.27.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.1.17"
flake8-isort = "^6.1.1"
flake8-simplify = "^0.21.0"
flake8-comprehensions = "^3.14.0"
flake8-bandit = "^4.1.1"
flake8-debugger = "^4.1.2"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
